<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="8dp"
    tools:context=".presentation.services.primeNumber.PrimeNumberFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:src="@drawable/ic_back"
        app:contentPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        app:tint="@color/colorBackground" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/font_black"
        android:padding="4dp"
        android:text="@string/tub_sonni_aniqlash_uchun_pastda_raqamni_kiriting_va_tekshirishni_bosing"
        android:textAlignment="textStart"
        android:textColor="@color/textPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_iv" />

    <EditText
        android:id="@+id/number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/font_bold"
        android:hint="@string/raqamni_kiriting"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/font_bold"
        android:paddingHorizontal="32dp"
        android:text="@string/tekshirish"
        android:textAllCaps="false"
        android:textColor="@color/colorBackground"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_et" />

    <androidx.cardview.widget.CardView
        android:id="@+id/result_card_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorSurface"
        app:cardCornerRadius="16dp"
        android:visibility="gone"
        app:contentPadding="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_black"
            android:padding="4dp"
            android:textColor="@color/textPrimary"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>